--- a/pom.xml
+++ b/pom.xml
@@ -194,17 +194,12 @@
 			<version>4.3.10.Final</version>
 		</dependency>
 
-		<!--<dependency>-->
-			<!--<groupId>org.hibernate</groupId>-->
-			<!--<artifactId>hibernate-annotations</artifactId>-->
-			<!--<version>3.5.6-Final</version>-->
-		<!--</dependency>-->
-
-		<!--<dependency>-->
-			<!--<groupId>org.hibernate</groupId>-->
-			<!--<artifactId>hibernate-core</artifactId>-->
-			<!--<version>4.3.10.Final</version>-->
-		<!--</dependency>-->
+		<!--jackson-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.2.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -343,7 +338,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<warName>travel</warName>
+					<warName>savethemeeting</warName>
 				</configuration>
 			</plugin>
 			<plugin>
